Fix search styling in dark mode

--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -7,12 +7,12 @@
   top: 0;
   z-index: -1;
   height: 115%;
+}
 
-  :global(.light) & {
-    background-image: linear-gradient(
-      180deg,
-      rgba(0, 0, 0, 0.8) 0%,
-      rgba(0, 0, 0, 0) 100%
-    );
-  }
+.headerTransparent::before {
+  background-image: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 0.8) 0%,
+    rgba(0, 0, 0, 0) 100%
+  );
 }
