--- a/src/components/header/search/search.module.css
+++ b/src/components/header/search/search.module.css
@@ -2,126 +2,142 @@
   position: relative;
 }
 
-.search:focus-within {
-  .searchIcon {
-    @apply text-icon;
-  }
-}
-
-.backgroundSolid {
-  .searchInput {
-    @apply bg-gray-800 text-white;
-
-    &::placeholder {
-      @apply text-secondary-inverted;
-    }
-
-    &:focus {
-      @apply bg-white text-primary;
-
-      &::placeholder {
-        @apply text-secondary;
-      }
-    }
-  }
-
-  .searchIcon {
-    @apply text-icon-inverted;
-  }
-
-  &:hover {
-    .searchInput {
-      @apply bg-white text-primary;
-
-      &::placeholder {
-        @apply text-secondary;
-      }
-    }
-
-    .searchIcon {
-      @apply text-icon;
-    }
-  }
+.searchIcon,
+.searchInput,
+.searchInput::placeholder {
+  transition: all 0.2s ease-in-out;
 }
 
 .backgroundTransparent {
   .searchInput {
     backdrop-filter: blur(4px);
   }
-
-  .searchIcon {
-    @apply text-icon-inverted;
-  }
 }
 
-:global(.light) .backgroundTransparent {
-  .searchInput {
-    @apply text-white;
-    background-color: rgba(255, 255, 255, 0.15);
-
-    &::placeholder {
-      @apply text-secondary-inverted;
-    }
-
-    &:focus {
-      @apply bg-white text-primary;
-
-      &::placeholder {
-        @apply text-secondary;
-      }
-    }
-  }
-
-  &:hover {
-    .searchInput {
-      @apply bg-white text-primary;
-
-      &::placeholder {
-        @apply text-secondary;
-      }
-    }
-
+:global(.light) {
+  .search:focus-within {
     .searchIcon {
       @apply text-icon;
     }
   }
-}
 
-:global(.dark) .backgroundTransparent {
-  .searchInput {
-    @apply text-white;
-    background-color: rgba(255, 255, 255, 0.15);
+  .backgroundSolid {
+    &:hover {
+      .searchInput {
+        @apply bg-white text-primary;
 
-    &::placeholder {
-      @apply text-secondary-inverted;
-    }
+        &::placeholder {
+          @apply text-secondary;
+        }
+      }
 
-    &:focus {
-      @apply bg-gray-800 text-primary-inverted;
-
-      &::placeholder {
-        @apply text-secondary-inverted;
+      .searchIcon {
+        @apply text-icon;
       }
     }
-  }
 
-  .searchIcon {
-    @apply text-icon-inverted;
-  }
-
-  &:hover {
     .searchInput {
-      @apply bg-gray-800 text-primary-inverted;
+      @apply bg-gray-800 text-white;
 
       &::placeholder {
         @apply text-secondary-inverted;
       }
+
+      &:focus {
+        @apply bg-white text-primary;
+
+        &::placeholder {
+          @apply text-secondary;
+        }
+      }
+    }
+
+    .searchIcon {
+      @apply text-icon-inverted;
+    }
+  }
+
+  .backgroundTransparent {
+    &:hover {
+      .searchInput {
+        @apply bg-white text-primary;
+
+        &::placeholder {
+          @apply text-secondary;
+        }
+      }
+
+      .searchIcon {
+        @apply text-icon;
+      }
+    }
+
+    .searchInput {
+      @apply text-white;
+      background-color: rgba(255, 255, 255, 0.15);
+
+      &::placeholder {
+        @apply text-secondary-inverted;
+      }
+
+      &:focus {
+        @apply bg-white text-primary;
+
+        &::placeholder {
+          @apply text-secondary;
+        }
+      }
+    }
+
+    .searchIcon {
+      @apply text-icon-inverted;
     }
   }
 }
 
-.searchIcon,
-.searchInput,
-.searchInput::placeholder {
-  transition: all 0.2s ease-in-out;
+:global(.dark) {
+  .backgroundTransparent,
+  .backgroundSolid {
+    &:hover {
+      .searchInput {
+        @apply bg-gray-800 text-primary-inverted;
+
+        &::placeholder {
+          @apply text-secondary-inverted;
+        }
+      }
+    }
+
+    .searchInput {
+      @apply text-primary-inverted;
+
+      &::placeholder {
+        @apply text-secondary-inverted;
+      }
+
+      &:focus {
+        @apply bg-gray-800 text-primary-inverted;
+
+        &::placeholder {
+          @apply text-secondary-inverted;
+        }
+      }
+    }
+
+    .searchIcon {
+      @apply text-icon-inverted;
+    }
+  }
+
+  .backgroundTransparent {
+    .searchInput {
+      background-color: rgba(255, 255, 255, 0.15);
+    }
+  }
+
+  .backgroundSolid {
+    .searchInput {
+      background-color: rgba(255, 255, 255, 0.1);
+    }
+  }
 }
